added javadoc_url site variable href replaced with md syntax in all .md files

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ markdown: redcarpet
 kramdown:
     input: GFM
     coderay_line_numbers: nil
+
+
+#Site content configuration
+javadoc_url: http://javers.org/javadoc_0.8.0/
