--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ kramdown:
 
 #Site content configuration
 javadoc_url: /javadoc_2.0/
-javers_current_version: "3.0.0-RC"
+javers_current_version: "3.0.0"
 
 javers_java7_version: "2.9.2"
 
