--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,5 @@ javers_java7_version: "2.9.2"
 
 url: "https://javers.org"
 
+description: JaVers &mdash; Object auditing and diff framework for Java
+
