--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ url: "https://javers.org"
 
 description: JaVers &mdash; Object auditing and diff framework for Java
 
+permalink: /blog/:year/:month/:title.html
+
