--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ kramdown:
 
 #Site content configuration
 javadoc_url: /javadoc_3.x/
-javers_current_version: "3.5.0-RC"
+javers_current_version: "3.5.0"
 
 javers_java7_version: "2.9.2"
 
