--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ kramdown:
 
 #Site content configuration
 javadoc_url: /javadoc_4.x/
-javers_current_version: "3.14.0"
+javers_current_version: "5.0.0-RC2"
 
 javers_java7_version: "2.9.2"
 
