--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ kramdown:
 
 #Site content configuration
 javadoc_url: /javadoc_5.x/
+github_core_main_url: https://github.com/javers/javers/blob/master/javers-core/src/main/java/
+github_core_test_url: https://github.com/javers/javers/blob/master/javers-core/src/test/groovy/
 javers_current_version: "5.0.1"
 
 javers_java7_version: "2.9.2"
