--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ kramdown:
 #Site content configuration
 javadoc_url: /javadoc_5.x/
 github_core_main_url: https://github.com/javers/javers/blob/master/javers-core/src/main/java/
+github_spring_url: https://github.com/javers/javers/blob/master/javers-spring/src/main/java/
 github_core_test_url: https://github.com/javers/javers/blob/master/javers-core/src/test/groovy/
 javers_current_version: "5.6.0"
 
